@@ -1,3 +1,8 @@
+* Thu Jun 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
+- Lots of additions to SiteCast/SlashGrid, including
+  /grid/local/ filesystem.
+- GridSiteCastAlias now allows any URL scheme (gsiftp,
+  xrootd, ...) not just HTTP(S).
 * Fri Jun  9 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
 - Add patch from Jan Pospisil <honik@kma.zcu.cz> to
   Makefile, to allow standalone building of libraries.
